[gd_scene load_steps=24 format=3 uid="uid://cg5l1p7ydjmk6"]

[ext_resource type="Script" path="res://escenas/items/box_x3/box_x3.gd" id="1_0msl5"]
[ext_resource type="Texture2D" uid="uid://cmi1vkgbxecik" path="res://assets/items/box_x3/ches_test-Sheet.png" id="2_52olj"]
[ext_resource type="Texture2D" uid="uid://o7ume7j7byon" path="res://assets/items/box_x3/Sprite-X3-Sheet.png" id="3_30ekr"]
[ext_resource type="Texture2D" uid="uid://td61w3itf05w" path="res://assets/items/portal/portal-sheet.png" id="4_ap7vm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1xr6e"]
atlas = ExtResource("2_52olj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofeiw"]
atlas = ExtResource("2_52olj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra160"]
atlas = ExtResource("3_30ekr")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jet57"]
atlas = ExtResource("3_30ekr")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn1ww"]
atlas = ExtResource("3_30ekr")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1jj"]
atlas = ExtResource("3_30ekr")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6e6j"]
atlas = ExtResource("3_30ekr")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_krqo3"]
atlas = ExtResource("3_30ekr")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wccfg"]
atlas = ExtResource("3_30ekr")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0oq8b"]
atlas = ExtResource("3_30ekr")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a5xp"]
atlas = ExtResource("4_ap7vm")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5fgt"]
atlas = ExtResource("4_ap7vm")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pns3"]
atlas = ExtResource("4_ap7vm")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtmyx"]
atlas = ExtResource("4_ap7vm")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1ar6"]
atlas = ExtResource("4_ap7vm")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_itjfi"]
atlas = ExtResource("4_ap7vm")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_42gvb"]
atlas = ExtResource("4_ap7vm")
region = Rect2(240, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_4peay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xr6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofeiw")
}],
"loop": true,
"name": &"default",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra160")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jet57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn1ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1jj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6e6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krqo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wccfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oq8b")
}],
"loop": false,
"name": &"destroy",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a5xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5fgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtmyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1ar6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itjfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42gvb")
}],
"loop": false,
"name": &"portal",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ullrr"]
size = Vector2(29, 29)

[node name="box_x3" type="Area2D"]
script = ExtResource("1_0msl5")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_4peay")
animation = &"destroy"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ullrr")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
